@@ -2,7 +2,9 @@ Nutch Change Log
 
 Unreleased Changes
 
-* NUTCH-773 - Some minor bugs in AbstractFetchSchedule (Reinhard Schwab)
+* NUTCH-753 Prevent new Fetcher from retrieving the robots twice (Julien Nioche via ab)
+
+* NUTCH-773 - Some minor bugs in AbstractFetchSchedule (Reinhard Schwab via ab)
 
 * NUTCH-765 - Allow Crawl class to call Either Solr or Lucene Indexer (kubes)
 
